Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1720

freezes for half a minute when reloading files

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 2.1.0
    • None
    • Editors
    • None
    • 6f67360efeb01dc314c742df8489d63674b5308a

    Description

      upon reloading files after they changed on disk (typically due to git operations), creator entirely freezes for a significant amount of time.
      interrupting the process always yields pretty much the same backtrace:

      #0 0xf6f06689 in QList<QTextCursorPrivate*>::contains (this=0xaec42d0, t=@0xfff50b10) at ../../include/QtCore/../../src/corelib/tools/qlist.h:863
      #1 0xf6f03565 in QTextDocumentPrivate::adjustDocumentChangesAndCursors (this=0xaec4218, from=8952, addedOrRemoved=1, op=QTextUndoCommand::MoveCursor)
      at /depot/obuddenh/qt-4.7/src/gui/text/qtextdocument_p.cpp:1272
      #2 0xf6eff1d7 in QTextDocumentPrivate::insert_block (this=0xaec4218, pos=8952, strPos=121288, format=0, blockFormat=1, op=QTextUndoCommand::MoveCursor, command=5)
      at /depot/obuddenh/qt-4.7/src/gui/text/qtextdocument_p.cpp:390
      #3 0xf6eff4e7 in QTextDocumentPrivate::insertBlock (this=0xaec4218, blockSeparator=..., pos=8952, blockFormat=1, charFormat=0, op=QTextUndoCommand::MoveCursor)
      at /depot/obuddenh/qt-4.7/src/gui/text/qtextdocument_p.cpp:417
      #4 0xf6eff7d1 in QTextDocumentPrivate::insertBlock (this=0xaec4218, pos=8952, blockFormat=1, charFormat=0, op=QTextUndoCommand::MoveCursor)
      at /depot/obuddenh/qt-4.7/src/gui/text/qtextdocument_p.cpp:448
      #5 0xf6f2d9cd in QTextCursorPrivate::insertBlock (this=0xe4c94a8, format=..., charFormat=...) at /depot/obuddenh/qt-4.7/src/gui/text/qtextcursor.cpp:209
      #6 0xf6f319b7 in QTextCursor::insertText (this=0xfff50df4, text=..., _format=...) at /depot/obuddenh/qt-4.7/src/gui/text/qtextcursor.cpp:1440
      #7 0xf6f31479 in QTextCursor::insertText (this=0xfff50df4, text=...) at /depot/obuddenh/qt-4.7/src/gui/text/qtextcursor.cpp:1374
      #8 0xf6eec397 in QTextDocument::setPlainText (this=0xa781f50, text=...) at text/qtextdocument.cpp:1158
      #9 0xf42cc2c9 in TextEditor::BaseTextDocument::open (this=0xaec4170, fileName=...) at /depot/obuddenh/qtcreator/src/plugins/texteditor/basetextdocument.cpp:310
      #10 0xf42cc5e0 in TextEditor::BaseTextDocument::reload (this=0xaec4170) at /depot/obuddenh/qtcreator/src/plugins/texteditor/basetextdocument.cpp:333
      #11 0xf42cc68c in TextEditor::BaseTextDocument::reload (this=0xaec4170, flag=Core::IFile::FlagReload, type=Core::IFile::TypeContents)
      at /depot/obuddenh/qtcreator/src/plugins/texteditor/basetextdocument.cpp:356
      #12 0xf5984b7f in Core::FileManager::checkForReload (this=0x8f3b170) at /depot/obuddenh/qtcreator/src/plugins/coreplugin/filemanager.cpp:863
      #13 0xf5a3b6bc in Core::FileManager::qt_metacall (this=0x8f3b170, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0xa151eb8)
      at /depot/obuddenh/qtcreator_build/src/plugins/coreplugin/.moc/debug-shared/moc_filemanager.cpp:95
      #14 0xf676ccfe in QMetaObject::metacall (object=0x8f3b170, cl=QMetaObject::InvokeMetaMethod, idx=9, argv=0xa151eb8)
      at /depot/obuddenh/qt-4.7/src/corelib/kernel/qmetaobject.cpp:237
      #15 0xf677bb77 in QMetaCallEvent::placeMetaCall (this=0xe1d9620, object=0x8f3b170) at /depot/obuddenh/qt-4.7/src/corelib/kernel/qobject.cpp:534
      #16 0xf677dbcb in QObject::event (this=0x8f3b170, e=0xe1d9620) at /depot/obuddenh/qt-4.7/src/corelib/kernel/qobject.cpp:1211
      #17 0xf6bef36c in QApplicationPrivate::notify_helper (this=0x8e979d8, receiver=0x8f3b170, e=0xe1d9620)
      at /depot/obuddenh/qt-4.7/src/gui/kernel/qapplication.cpp:4389
      #18 0xf6beca9c in QApplication::notify (this=0xfff51a78, receiver=0x8f3b170, e=0xe1d9620) at /depot/obuddenh/qt-4.7/src/gui/kernel/qapplication.cpp:3791
      #19 0xf6764f99 in QCoreApplication::notifyInternal (this=0xfff51a78, receiver=0x8f3b170, event=0xe1d9620)
      at /depot/obuddenh/qt-4.7/src/corelib/kernel/qcoreapplication.cpp:732
      #20 0xf6bdedc9 in QCoreApplication::sendEvent (receiver=0x8f3b170, event=0xe1d9620) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
      #21 0xf6766063 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x8e97ad0)
      at /depot/obuddenh/qt-4.7/src/corelib/kernel/qcoreapplication.cpp:1373
      #22 0xf6765d1b in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at /depot/obuddenh/qt-4.7/src/corelib/kernel/qcoreapplication.cpp:1266
      #23 0xf6cbca76 in QCoreApplication::sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
      #24 0xf679da7c in postEventSourceDispatch (s=0x8e9b258) at /depot/obuddenh/qt-4.7/src/corelib/kernel/qeventdispatcher_glib.cpp:277
      #25 0xf62692f5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
      #26 0xf626cfd8 in ?? () from /lib/libglib-2.0.so.0
      #27 0xf626d1b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
      #28 0xf679eaae in QEventDispatcherGlib::processEvents (this=0x8e98598, flags=...) at /depot/obuddenh/qt-4.7/src/corelib/kernel/qeventdispatcher_glib.cpp:415
      #29 0xf6cc8d9e in QGuiEventDispatcherGlib::processEvents (this=0x8e98598, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
      #30 0xf6762357 in QEventLoop::processEvents (this=0xfff5195c, flags=...) at kernel/qeventloop.cpp:149
      #31 0xf676249c in QEventLoop::exec (this=0xfff5195c, flags=...) at kernel/qeventloop.cpp:201
      #32 0xf676568b in QCoreApplication::exec () at /depot/obuddenh/qt-4.7/src/corelib/kernel/qcoreapplication.cpp:1009
      #33 0xf6bec6aa in QApplication::exec () at /depot/obuddenh/qt-4.7/src/gui/kernel/qapplication.cpp:3665
      #34 0x08051b54 in main (argc=1, argv=0xfff51d54) at /depot/obuddenh/qtcreator/src/app/main.cpp:320

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mae mae
            buddenha Oswald Buddenhagen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes